# quarium_controller

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  conanfile.txt
conan_profile/: linux_to_pi.txt  linux_to_pi3.txt
conf/: quarium_controller.service  settings.json
data/: basic_schedule.json
include/: chrono_time.h  config.h  gpio_handler.h  gui.h  logger.h  lvgl_driver.h  network_interface.h  posix_includes.h  ring_buffer.h  run_configuration.h  schedule.h  signal_handler.h  utils.h  value_storage.h  value_transitioner.h
include/gpio/: gpio_chip.h  gpio_handler.h  gpio_pin.h  gpiod_wrapper.h
include/gui/: fb_lvgl_driver.h  main_view.h  main_view_controller.h  manual_control_view.h  manual_control_view_controller.h  module_view.h  module_view_controller.h  page_interface.h  sdl_lvgl_driver.h  single_output_view.h  single_output_view_controller.h  view.h  view_controller.h
include/gui/web/: main_container.h
include/io/: output_interface.h  output_value.h  outputs.h
include/io/gpio/: gpio_chip.h  gpio_pin.h
include/io/inputs/: input_interface.h  inputs.h
include/io/interfaces/can/: can.h
include/io/interfaces/gpio/: gpio_chip.h  gpio_pin.h  gpiod_wrapper.h
include/io/interfaces/mqtt/: mqtt.h
include/io/outputs/: output_interface.h  output_scheduler.h  output_transition.h  output_value.h  outputs.h
include/io/outputs/can/: can.h  can_output.h
include/io/outputs/gpio/: gpio_chip.h  gpio_pin.h
include/io/outputs/mqtt/: mqtt_output.h
include/io/outputs/remote_function/: remote_function.h
include/io/remote_function/: remote_function.h
include/modules/: module_collection.h  module_interface.h  remote_function.h
include/network/: network_header.h  network_interface.h  rest_resource.h  web_application.h
include/pattern_templates/: singleton.h  static_destructor.h
include/schedule/: output_interface.h  output_value.h  schedule.h  schedule_action.h  schedule_event.h  schedule_gpio.h  schedule_handler.h  schedule_output.h
src/: chrono_time.cpp  config.cpp  gpio_handler.cpp  gui.cpp  logger.cpp  lvgl_driver.cpp  network_interface.cpp  quarium_controller.cpp  run_configuration.cpp  schedule.cpp  signal_handler.cpp
src/gpio/: gpio_chip.cpp  gpio_handler.cpp  gpio_pin.cpp
src/gui/: fb_lvgl_driver.cpp  main_view.cpp  main_view_controller.cpp  manual_control_view.cpp  manual_control_view_controller.cpp  module_view.cpp  module_view_controller.cpp  sdl_lvgl_driver.cpp  single_output_view.cpp  single_output_view_controller.cpp  view.cpp  view_controller.cpp
src/gui/web/: main_container.cpp
src/io/: output_interface.cpp  output_value.cpp  outputs.cpp
src/io/gpio/: gpio_chip.cpp  gpio_pin.cpp
src/io/interfaces/can/: can.cpp
src/io/interfaces/gpio/: gpio_chip.cpp  gpio_pin.cpp
src/io/interfaces/mqtt/: mqtt.cpp
src/io/outputs/: output_interface.cpp  output_scheduler.cpp  output_value.cpp  outputs.cpp
src/io/outputs/can/: can.cpp  can_output.cpp
src/io/outputs/gpio/: gpio_chip.cpp  gpio_pin.cpp
src/io/outputs/mqtt/: mqtt_output.cpp
src/io/outputs/remote_function/: remote_function.cpp
src/io/remote_function/: remote_function.cpp
src/modules/: module_collection.cpp  module_interface.cpp  remote_function.cpp
src/network/: aws_iot_interface.cpp  network_interface.cpp  web_application.cpp
src/schedule/: output_interface.cpp  output_value.cpp  schedule.cpp  schedule_action.cpp  schedule_event.cpp  schedule_gpio.cpp  schedule_handler.cpp  schedule_output.cpp
tests/: chrono_time_test.cpp  output_value_test.cpp  ring_buffer_test.cpp  schedule_test.cpp  utils_test.cpp  value_transitioner_test.cpp
tests/test_schedules/: basic_test_schedule.json
webapp/: app-navigation.tag  app-view.tag  home-view.tag  index.html  manual-control-view.tag  schedule-view.tag
